<resources>
    <string name="app_name">HOME</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_myaccountinfo">My Account Info</string>
    <string name="nav_item_mybooking">My Booking</string>
    <string name="nav_item_todayinspirations">Today Inspirations</string>
    <string name="nav_item_history">My Booking History</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_myaccountinfo</item>
        <item>@string/nav_item_mybooking</item>
        <item>@string/nav_item_todayinspirations</item>
        <item>@string/nav_item_history</item>
    </string-array>


    <string name="hint_oldpassword">Old Password</string>
    <string name="hint_newpassword">New Password</string>
    <string name="hint_retypenewpass">Re-type New Password</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="appointment_reminder">Appointment Reminder Settings</string>
    <string name="personal_fisrtname">First Name</string>
    <string name="personal_lastname">Last Name</string>
    <string name="personal_mobile">Mobile</string>
    <string name="personal_email">Email</string>
    <string name="personal_password">Password</string>
    <string name="personal_paymentmethod">Payment Method</string>
    <string name="personal_invoices">Invoices</string>
    <string name="personal_terms">Terms &amp; Conditions</string>
    <string name="checkedstate">ON</string>
    <string name="uncheckedstate">OFF</string>
</resources>
