<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent">

    <TextView
        android:layout_marginLeft="@dimen/activity_vertical_margin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Personal Information"
        android:id="@+id/textView5" />

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="2dp"
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <Button
                android:layout_width="fill_parent"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content"
                android:text="@string/personal_fisrtname"
                android:id="@+id/button5"
               android:layout_marginBottom="1.5dp"
                android:background="#8b6ce4"
                android:textColor="#faf8f8"
                android:gravity="left|center_vertical" />



        <Button
            android:layout_width="fill_parent"
            android:background="#8b6ce4"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/personal_lastname"
            android:id="@+id/button6"
            android:layout_marginBottom="1.5dp"
            android:textColor="#faf8f8"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:textColor="#faf8f8"
            android:background="#8b6ce4"
            android:paddingLeft="5dp"
            android:layout_marginBottom="1.5dp"
            android:layout_height="wrap_content"
            android:text="@string/personal_mobile"
            android:id="@+id/button7"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_email"
            android:id="@+id/button8"
            android:paddingLeft="5dp"
            android:layout_marginBottom="1.5dp"
            android:background="#8b6ce4"
            android:textColor="#faf8f8"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_password"
            android:id="@+id/button9"
            android:paddingLeft="5dp"
            android:layout_marginBottom="1.5dp"
            android:background="#8b6ce4"
            android:textColor="#faf8f8"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_paymentmethod"
            android:id="@+id/button10"
            android:paddingLeft="5dp"
            android:layout_marginBottom="1.5dp"
            android:background="#8b6ce4"
            android:textColor="#faf8f8"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_invoices"
            android:id="@+id/button11"
            android:paddingLeft="5dp"
            android:layout_marginBottom="1.5dp"
            android:background="#8b6ce4"
            android:textColor="#faf8f8"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_terms"
            android:id="@+id/button12"
            android:paddingLeft="5dp"
            android:layout_marginBottom="1.5dp"
            android:background="#8b6ce4"
            android:textColor="#faf8f8"
            android:gravity="left|center_vertical" />

    </LinearLayout>

</LinearLayout>
